corrected spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ h1 {
 h2 {
   color: var(--primary-color);
   text-align: center;
-  margin: 30px 0px;
+  margin-bottom: 30px;
 }
 h3 {
   color: var(--primary-color);
@@ -50,7 +50,7 @@ h3 {
   font-size: 28px;
   text-decoration: none;
   display: block;
-  margin: 50px 630px;
+  margin: 50px 630px 100px 630px;
   text-align: center;
   background-color: var(--primary-color);
   color: var(--secondary-color);
